# Towards-Less-Greedy-Quantum-CSG-in-ISGs

./: .gitignore  GCSQ.py  READ_ME.md  algorithm.py  danielle.py  dwave_iterative.txt  dwave_iterative_3.txt  dwave_iterative_5.txt  dwave_iterative_k4_ctd.txt  dwave_iterative_k5_ctd.txt  dwave_non-iterative_2.txt  dwave_non_iterative.txt  eval_embeddings.py  get_done.py  jonas.py  k_split_GCSQ_at_most.py  k_split_GCSQ_exactly.py  leon.py  main.py  main_2.py  main_3.py  main_5.py  main_embedding.py  main_finish.py  main_k2.py  main_k2_2.py  main_qaoa.py  main_qaoa_finish.py  main_qaoa_finish_2.py  merge_results.py  min_k_cut_at_most.py  min_k_cut_exactly.py  min_k_cut_non_iterative.py  more_embeddings.txt  more_embeddings_2.txt  n_split_GCSQ.py  ours_iterative_at_most.py  ours_iterative_exactly.py  plot_physical_qubits.py  plotting.py  (+30 more)
classical/best-partition-master/: .gitignore  BestPartition.cpp  BestPartition.h  BranchAndBound.cpp  BranchAndBound.h  CMakeLists.txt  ILP.cpp  ILP.h  Main.cpp  PenalizingSubnetworks.cpp  PenalizingSubnetworks.h  README.md
classical/best-partition-master/Combo/: .gitignore  Combo.cpp  Combo.h  Graph.cpp  Graph.h  Main.cpp  Matrix.h  README.md
classical/best-partition-master/cmake/Modules/: FindCBC.cmake  FindCPLEX.cmake
classical/best-partition-master/test-networks/Aloise/: A00_main.net  A01_main.net  American College Football.net  Political Books.net  netscience_main.net  p53.net
classical/best-partition-master/test-networks/Jaehn/cpp_random_graphs/: generator.py
classical/best-partition-master/test-networks/Jaehn/cpp_real_world_graphs/: resave_as_edgelist.py
classical/best-partition-master/test-networks/Lorena/: GD00-a_main.net  bio-DM-LC.net  bio-diseasome.net  bio-grid-mouse.net  ca-CSphd.net  ca-sandi-auths.net  counter_example.net  lesmis.net  netscience_main.net  power-494-bus.net  rt-retweet.net
classical/best-partition-master/test-networks/Miyauchi/cpp_cell-formation/: 1-Ki-5x7.gt  1-Ki-5x7.net  10-MT-10x10.GT  10-MT-10x10.net  11-MI-10x15s.GT  11-MI-10x15s.net  12-As-14x24.gt  12-As-14x24.net  13-St-14x24.GT  13-St-14x24.net  14-Mc-16x24.GT  14-Mc-16x24.net  15-Sr-16x30.GT  15-Sr-16x30.net  16-KI-16x43.GT  16-KI-16x43.net  17-Ca-18x24.gt  17-Ca-18x24.net  18-MT-20x20.GT  18-MT-20x20.net  19-Ku-20x23.gt  19-Ku-20x23.net  2-WS-5x7.GT  2-WS-5x7.net  20-Ca-20x35.gt  20-Ca-20x35.net  21-Bo-20x35.gt  21-Bo-20x35.net  22-CH1-24x40.GT  22-CH1-24x40.net  23-CH2-24x40.GT  23-CH2-24x40.net  24-CH3-24x40.GT  24-CH3-24x40.net  (+37 more)
classical/best-partition-master/test-networks/eon_data_edgelists/: READ_ME.md  eon_graph_size_10_num_0.edgelist  eon_graph_size_10_num_1.edgelist  eon_graph_size_10_num_11.edgelist  eon_graph_size_10_num_13.edgelist  eon_graph_size_10_num_14.edgelist  eon_graph_size_10_num_16.edgelist  eon_graph_size_10_num_18.edgelist  eon_graph_size_10_num_3.edgelist  eon_graph_size_10_num_5.edgelist  eon_graph_size_10_num_6.edgelist  eon_graph_size_10_num_7.edgelist  eon_graph_size_10_num_8.edgelist  eon_graph_size_12_num_1.edgelist  eon_graph_size_12_num_10.edgelist  eon_graph_size_12_num_12.edgelist  eon_graph_size_12_num_14.edgelist  eon_graph_size_12_num_16.edgelist  eon_graph_size_12_num_18.edgelist  eon_graph_size_12_num_19.edgelist  eon_graph_size_12_num_2.edgelist  eon_graph_size_12_num_5.edgelist  eon_graph_size_14_num_0.edgelist  eon_graph_size_14_num_11.edgelist  eon_graph_size_14_num_13.edgelist  eon_graph_size_14_num_14.edgelist  eon_graph_size_14_num_15.edgelist  eon_graph_size_14_num_17.edgelist  eon_graph_size_14_num_19.edgelist  eon_graph_size_14_num_2.edgelist  eon_graph_size_14_num_3.edgelist  eon_graph_size_14_num_6.edgelist  eon_graph_size_14_num_7.edgelist  eon_graph_size_14_num_8.edgelist  eon_graph_size_14_num_9.edgelist  eon_graph_size_16_num_10.edgelist  eon_graph_size_16_num_11.edgelist  eon_graph_size_16_num_13.edgelist  eon_graph_size_16_num_16.edgelist  eon_graph_size_16_num_5.edgelist  (+95 more)
(+11317 files in other folders)
